# HandyVideo

./: README.md
src/: CMakeLists.txt  main.c  vcpkg.json
src/Draw/: PixFrameDraw.c  PixFrameDraw.h
src/ImageDraw/: ImageDraw.c  ImageDraw.h
src/Input/: VideoInput.c  VideoInput.h
